--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 gameplay:
   # The maximum amount of hunters at any one time.
   max-hunters: 5
-  # How many lives does the prey
+  # How many lives does the prey have
   prey-lives: 3
   # Any blocks on this list cannot be placed or broken
   block-blacklist:
@@ -14,7 +14,12 @@ gameplay:
     - LAVA_BUCKET
     - FLINT_AND_STEEL
   # What spawn range do hunters spawn at in relation to the prey
-  hunter-spawn-range: 2500
+  hunter-min-spawn-range: 800
+  hunter-max-spawn-range: 2500
+  # Where are prey spawned after a game is started, format is x, z.
+  prey-spawn-location: 0,0
+  # The world where all the lobby is present.
+  spawn-world-name: 'World'
 queue:
   prey-role: 'owner'
   # Which discord roles are considered priority and are placed at the front of the queue behind other paid members.
@@ -23,5 +28,6 @@ queue:
     - friend
   # When a position becomes available, how much time before the confirmation is timed out. This setting is in seconds
   confirm-timeout: 15
-
+  # How much time must past for premium members until they can play as a hunter again. This will read hours as h, or minutes as m
+  cooldown: 12h
   
